# CSE416

./: .gitignore  README.md  package-lock.json  package.json  script.sh
BackendCode/: README.MD
BackendCode/CSE416Project/endpoint_manager/: Cargo.toml
BackendCode/CSE416Project/endpoint_manager/src/: http_server.rs  rpc_client.rs
Backend_Go/: README.md  go.mod  go.sum  main.go  validator.go
CSE416/src/: App.css  App.tsx
CSE416/src/components/: CloudDrive.tsx  Dashboard.tsx  Transactions.tsx  Wallet.tsx
CSE416Project/: Cargo.toml
CSE416Project/endpoint_manager/: Cargo.toml
CSE416Project/endpoint_manager/src/: http_server.rs  main.rs  rpc_client.rs
CSE416Project/endpoint_manager/src/endpoints/: wallet.rs
Frontend/: README.md
Frontend/my-electron-app/: index.html  main.ts  package-lock.json
Frontend/my-electron-app/src/: App.css  CloudDrive.css
Frontend/my-electron-app/src/components/: Dashboard.tsx  Peers.tsx
my-electron-app/: main.ts  package-lock.json  package.json  preload.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
my-electron-app/src/: App.css  App.tsx  CloudDrive.css  Peers.css
my-electron-app/src/components/: CloudDrive.tsx  Dashboard.tsx  Explore.tsx  FileShare.tsx  Login.tsx  Main.tsx  Peers.tsx  Register.tsx  RequestFile.tsx  Settings.tsx  Transactions.tsx  Wallet.tsx
