[package]
name = "endpoint_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
bitcoincore-rpc = "0.19.0"
bitcoin = { version = "0.32.2", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"
url = "2.2" 

